--- a/002.CSS학습/07.Sass/css/main.scss
+++ b/002.CSS학습/07.Sass/css/main.scss
@@ -54,6 +54,15 @@
       - 호출방법 : @include 믹스인이름;
       - 호출방법 : @include 믹스인이름(전달값);
 
+    (6) 네스팅 이어붙이기 기법(&)
+      - 가상요소, 가상클래스, 특정클래스를 현재 선택요소에 세팅하는 방법
+      - &는 현재 선택요소 자신을 가리킴
+
+    (7) 반복코드 확정: @extend
+      1) 사용이유 : 반복되는 같은 세팅을 클래스를 쉽게 도입한다.
+      2) 사용방법 : 선택자 코드 안에 @extend 클래스명  형식으로 사용
+      3) 공통코드 외에 다른 세팅속성은 하단에 추가로 구현한다.
+      4) 장점 : 공통코드 적용을 위해 각 요소에 클래스를 일일히 주지않아도 공통코드를 작용할 수 있다.
  *****************************************************************************/
 
 //  외부변수세팅 sass불러오기
@@ -62,18 +71,20 @@
 @import "./common/reset.scss";
 
 // @mixin 세팅하기
-// (1)타이틀 디자인 믹스인
-// [1]전달해서 변경할 값이 없다면 전달변수없는 믹스인 만들기
+// (1) 타이틀 디자인 믹스인
+// [1] 전달해서 변경할 값이 없다면 전달변수없는 믹스인 만들기
 // @mixin title-text {
-    
-// [2]글자색을 전달해서 변경해야 하므로 전달변수를 만들어준다.
+
+// [2] 글자색을 전달해서 변경해야 하므로 전달변수를 만들어준다.
 // 변수는 $변수명으로 만들고 지역변수로 사용된다
 // @mixin title-text($selColor) {
 
-// [3]전달값을 보내지 않아도 에러나지 않도록 기본값 지정하기
+// [3] 전달값을 보내지 않아도 에러나지 않도록 기본값 지정하기
 @mixin title-text($selColor: red) {
   // $selColor - 글자색 전달변수
   color: $selColor;
+  //   하단 마진
+  margin-bottom: $fontSize1;
   font: {
     size: 40px;
     family: "Times New Roman";
@@ -83,6 +94,15 @@
     decoration: underline;
     underline-offset: 10px;
     shadow: 5px 5px 4px #00000076;
+  }
+}
+
+// (2) 박스테두리 믹스인
+@mixin box-border($bdColor: blue) {
+  border: {
+    color: $bdColor;
+    style: dashed;
+    width: 7px;
   }
 }
 
@@ -122,17 +142,95 @@
     }
     padding: 20px;
   }
+
+  //   서브타이틀 박스
+  h2{
+    @extend .box-basic;
+    font-size: $fontSize3;
+  }
 } /////top-area
 
 /* 메인영역 */
 .main-area {
+  // 내부박스 section
+  section {
+    @include box-border(pink);
+    margin-bottom: 20px;
+    padding: 20px;
+  }
   // 메인 영역 타이틀 믹스인 호출
   h3 {
     @include title-text(darkblue);
   }
+  //   리스트,문단 디자인
+  ul,
+  ol,
+  p {
+    line-height: 2;
+    font-size: 24px;
+    padding: 0 20px;
+    li {
+      text: {
+        decoration: underline;
+        underline-offset: 10px;
+        decoration-thickness: 5px;
+        decoration-color: $mainColor2;
+        align: center;
+      }
+      background-color: #ff0;
+      // 네스팅 이어붙이기 기법(&)
+      // 첫번째 li 강조하기
+      &:first-child {
+        color: orchid;
+        font-weight: bold;
+        font-size: $fontSize3;
+        text-shadow: 1px 0 #000, -1px 0 #000, 0 1px #000, 0 -1px #000;
+      }
+      // 가상요소 불릿넣기
+      &::before {
+        content: "😀";
+      }
+    }
+  }
 } ///////////////main-area
+
+// 버튼 기본 디자인 클래스
+.button-basic {
+  display: inline-block;
+  border: 1px solid #222;
+  border-radius: 20px;
+  padding: 15px 30px;
+  font-size: 20px;
+  cursor: pointer;
+  margin-left: 20px;
+}
+
+// 일반 박스 기본
+.box-basic {
+  text-align: center;
+  padding: 20px 0;
+}
+
+// 위의 기본 디자인 클래스를 특정클래스에 그대로 가져오고 싶을때
+// @extend 클래스명 사용
+// 제출하기 버튼에 기본버튼 디자인 입히기
+.button-report {
+  // 기본 버튼 클래스 가져오기
+  @extend .button-basic;
+  // 다른 디자인 요소는 추가로 구현
+  background-color: orange;
+  color: white;
+}
+
+// 기본 박스 디자인을 입혀서 버튼박스를 세팅
+.button-box {
+  @extend .box-basic;
+  // 다른 디자인 요소는 추가 구현
+  background-image: linear-gradient(to bottom, lightgreen, transparent);
+}
 
 /* 하단 타이틀 */
 .bottom-title {
-  @include title-text();
+  @extend .box-basic;
+  @include title-text;
 }
