--- a/002.CSS학습/07.Sass/css/main.scss
+++ b/002.CSS학습/07.Sass/css/main.scss
@@ -144,7 +144,7 @@
   }
 
   //   서브타이틀 박스
-  h2{
+  h2 {
     @extend .box-basic;
     font-size: $fontSize3;
   }
@@ -203,6 +203,23 @@
   font-size: 20px;
   cursor: pointer;
   margin-left: 20px;
+  //   마우스 오버시 세팅하기
+  &:hover {
+    background-color: hotpink;
+    text: {
+      decoration: overline;
+      decoration-style: wavy;
+    }
+  }
+  //   클래스가 "my"인 경우 디자인 변경
+  &.my {
+    text: {
+      decoration: underline;
+      decoration-style: dotted;
+      underline-offset: 10px;
+      decoration-thickness: 5px;
+    }
+  }
 }
 
 // 일반 박스 기본
