배열순회 메서드 비교
.show()는 diplay를 보여주는 메서드
.hide()는 display를 숨기는 메서드
.toggle()는 display를 토글하는 메서드

find()는 조건에 맞을때 return true하면 해당 배열값이 변수에 할당된다.
forEach()는 모두 순회한다

J쿼리 닫기버튼 이벤트 설정하기
$(".cbtn").click(()=>subContBox.hide());

--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/media.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/media.css
@@ -16,7 +16,7 @@
   하위 박스중 sticky박스가 작동하지 않음!
   따라서 body>* 박스에 이것을 준다! */
   body>* {
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
   }
   /* 스티키 박스 메뉴 아래쪽에 걸리게 top값 조정 */
   #dokebi-menu{
