--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/main.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/main.css
@@ -351,7 +351,7 @@ body * {
     background-color: #000;
     color: #fff;
     z-index: 999999;
-    overflow: hidden;
+    overflow: auto;
     display: none;
 }
 .sub-cont a{
