--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/main.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/main.css
@@ -389,3 +389,23 @@ body * {
     /* outline: 1px solid yellow; */
     overflow: auto;
 }
+/* 내용박스 하위 이미지 */
+.sub-item img{
+    max-width: 100%;
+    /* 박스가 이미지 최대크기보다 작아지면 이미지가 박스에 100%로 페딩 안쪽을 모두 채움 */
+
+}
+.sub-item iframe{
+    width: 100%;
+    aspect-ratio: 2/1.5;
+    border: none;
+}
+
+@media screen and (max-width: 800px) {
+    .sub-cont h1 {
+      font-size: 5vw;
+    }
+    .sub-item {
+      font-size: 4vw;
+    }
+  }
