--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/media.css
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/css/media.css
@@ -4,20 +4,21 @@
 
 /********* 최대사이즈 1024px 이하 시작 *********/
 @media screen and (max-width: 1024px) {
-    /* 내가 직접 수정한 내용 */
-    
+  /* 내가 직접 수정한것! */
 
-    /* 미리보기 한줄에 2개씩 */
-    .preview-box li {
-        flex-basis: calc(100% / 2 - 15px);
-    }
+  /* 미리보기 한줄에 2개씩 */
+  .preview-box li {
+    flex-basis: calc(100% / 2 - 15px);
+  }
+
 
   /* x축 스크롤없앰 -> html,body에 줄때
   하위 박스중 sticky박스가 작동하지 않음!
   따라서 body>* 박스에 이것을 준다! */
   body>* {
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
   }
+
   /* 스티키 박스 메뉴 아래쪽에 걸리게 top값 조정 */
   #dokebi-menu{
     top: 58px;
@@ -29,11 +30,11 @@
     display: none;
   }
   /* 상단영역 높이값 auto */
-  .header .partbox {
+  .top-area {
     height: auto;
   }
   /* 상단로고 조정 */
-  .header__logo img {
+  .mlogo img {
     width: auto;
     height: 38px;
     margin: 0;
@@ -46,11 +47,11 @@
   }
   /* 햄버거 버튼 상위.top에 클래스on 
     줄경우 x버튼으로 변경 */
-  .header.on .ham {
+  .top-area.on .ham {
     z-index: 9999;
     transform: scale(1.5);
   }
-  .header.on .ham::before {
+  .top-area.on .ham::before {
     content: "×";
   }
   /* 상단영역고정으로 가려지는 공간밀기 */
@@ -58,7 +59,7 @@
     padding-top: 59px;
   }
   /* 상단영역 고정 */
-  #header {
+  #top-area {
     position: fixed;
     top: 0;
     left: 0;
@@ -69,9 +70,9 @@
   /* 전체메뉴박스 */
   .gnb {
     position: fixed;
-    top: 59px;
+    top: 55px;
     left: 100%;
-    height: calc(100% - 59px);
+    height: calc(100% - 55px);
     /* 내용많아지면 스크롤바 자동생성(y축) */
     overflow: auto;
     z-index: 9999999;
@@ -81,7 +82,7 @@
     transition: left 0.4s ease-in-out;
   }
   /* 메뉴박스 등장 */
-  .header.on .gnb {
+  .top-area.on .gnb {
     left: 0;
   }
 
@@ -111,6 +112,13 @@
     display: none;
   }
 
+  #spart-menu{
+    /* 상단메뉴가 고정되므로 그 아래에 걸려야함! */
+    top: 56px;
+    /* 모바일에서 가로스크롤 */
+    overflow: auto;
+  }
+
   /* 현장포토 */
   .live-box ul {
     /* 한줄에 2개씩 */
@@ -136,15 +144,11 @@
     /* grid-template-rows: repeat(4, 34vw); */
     /* grid-template-rows: auto; */
   }
-  /* 공유, 이동욱 포스터 */
-  /* .poster-box ul li:nth-child(4) {
-    grid-row: 3;
-    grid-column: 2;
-  } */
-  /* 공유, 이동욱, 육성재 포스터 */
+  /* 공통 */
   .poster-box ul li {
     grid-row: auto !important;
   }
+  
 
   /* 최신동영상 - 한번에 2개만 보이기 */
   .clip-box li {
