--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/css/main.css
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/css/main.css
@@ -206,6 +206,100 @@ body * {
   min-height: 206px;
 }
 
+.tmenu {
+  display: flex;
+  max-width: 970px;
+  height: 44px;
+  margin: 0 auto;
+}
+.tmenu div {
+  flex: 1px;
+}
+.tmenu .sns a {
+  width: 16px;
+  height: 16px;
+  /* .fi에 inline-block이 셋팅됨 */
+  font-size: 16px;
+  text-align: center;
+  line-height: 16px;
+  vertical-align: top;
+  /* 마진으로 사이간격주기 */
+  margin-top: 14px;
+  margin-right: 17px;
+  /* 트랜지션: 속시이지 */
+  transition: opacity 0.2s;
+  /* 트위터 크기조정 */
+  /* 유튜브 크기조정 */
+  /* 카카오스토리 배경이미지 넣기 */
+}
+.tmenu .sns a:hover {
+  opacity: 0.8;
+  color: hotpink;
+}
+.tmenu .sns a.fi-twitter {
+  font-size: 13px;
+}
+.tmenu .sns a.fi-youtube-play {
+  font-size: 11px;
+}
+.tmenu .sns a.cas {
+  background: url(../images/sns_kakao.png) no-repeat center/auto 100%;
+}
+.tmenu .sns a.fi-camera, .tmenu .sns a.fi-laptop {
+  font-style: 14px;
+}
+.tmenu .sideMenu .smbx {
+  /* 플렉스박스 */
+  display: flex;
+  /* 플렉스 진행방향 정렬 - 오른쪽끝 */
+  justify-content: flex-end;
+  /* 글자체: Roboto, 나눔바른고딕 */
+  font-family: "Roboto", nbg;
+  font-size: 12px;
+  /* 사이드메뉴 상위 a요소 */
+}
+.tmenu .sideMenu .smbx > li {
+  /* 사이드메뉴 상위메뉴 첫번째li 사이구분선 */
+}
+.tmenu .sideMenu .smbx > li > a {
+  display: block;
+  padding: 0 13px;
+  line-height: 44px;
+  color: #747474;
+}
+.tmenu .sideMenu .smbx > li:first-child {
+  border-right: 1px solid #747474;
+}
+.tmenu .sideMenu .smbx > li:first-child > a {
+  cursor: text;
+}
+.tmenu .sideMenu .smbx > li .smsub {
+  position: absolute;
+  border: 1px solid #e5e5e5;
+  /* 박스숨기기 */
+  height: 0;
+  overflow: hidden;
+  /* display: none; */
+  opacity: 0;
+  /* 트랜지션 */
+  transition: 0.5s;
+}
+.tmenu .sideMenu .smbx > li a {
+  display: block;
+  padding: 7px 10px;
+  padding-right: 19px;
+  background-color: #fff;
+  color: #747474;
+}
+.tmenu .sideMenu .smbx > li a:hover {
+  background-color: pink;
+  color: #333;
+}
+.tmenu .sideMenu .smbx > li:hover .smsub {
+  opacity: 1;
+  height: auto;
+}
+
 /**************************************** 메인영역 **************************************/
 .main-area {
   /* 최소높이 - 컨텐츠가 작을 경우 대비 */
