--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/css/common/_common.scss
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/css/common/_common.scss
@@ -84,7 +84,7 @@
         // &는 선택자를 명확히 구분할때 사용한다
         &:first-child {
           border-right: 1px solid #747474;
-          >a{
+          > a {
             cursor: text;
           }
         }
@@ -109,12 +109,11 @@
           background-color: #fff;
           color: #747474;
 
-
-        //   서브a에 마우스 오버시
-        &:hover{
+          //   서브a에 마우스 오버시
+          &:hover {
             background-color: pink;
             color: #333;
-        }
+          }
         }
         // 상위 li에 마우스 오버시 서브메뉴 보이기
         &:hover .smsub {
@@ -126,7 +125,56 @@
   }
 }
 // 1-2 로고박스
+/* 1-2.로고박스 */
+.logo {
+  height: 104px;
+  margin-bottom: 10px;
+  text-align: center;
+}
 // 1-3 GNB 메뉴
+.gnb {
+  min-height: 46px;
+  padding: 0 30px;
+  /* GNB ul박스 */
+  ul {
+    /* 플렉스박스 */
+    display: flex;
+    /* 플렉스진행방향 정렬 */
+    justify-content: center;
+    /* 플렉스 줄바꿈설정 */
+    flex-wrap: wrap;
+    /* 사이간격 속성 -> gap: 위아래 양쪽 (flex에서 사용함)
+          -> 숫자를 하나만 쓰면 양방향이 모두같은수치 셋팅 */
+    gap: 0 45px;
+
+    /* GNB li 리스트 */
+    li {
+      /* padding-right: 45px; 
+    -> 사이간격을 li에 패딩으로 안주고
+    부모요소인 flex박스에서 gap속성으로 준다! */
+      font-family: "Roboto Condensed", sans-serif;
+      line-height: 40px;
+      &:last-child i {
+        /* 돋보기는 i요소 */
+        font-weight: bold;
+        cursor: pointer;
+        &:hover {
+          color: red;
+        }
+      }
+    }
+  }
+
+  /* GNB a요소 */
+  a {
+    /* 트랜지션 */
+    transition: color 0.2s linear;
+    &:hover {
+      color: red;
+    }
+  }
+}
+
 /**************************************** 메인영역 **************************************/
 .main-area {
   /* 최소높이 - 컨텐츠가 작을 경우 대비 */
