--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/css/main.css
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/css/main.css
@@ -3,13 +3,26 @@
 /* 요소의 초기화 */
 /* 1. 마진,패딩 없애기 */
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@300&display=swap");
-html, body, h1, h2, h3, h4, h5, h6, ul, ol, dt, dd, p {
+html,
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+ol,
+dt,
+dd,
+p {
   margin: 0;
   padding: 0;
 }
 
 /* 가로스크롤 생김 방지!(특히 모바일) */
-html, body {
+html,
+body {
   overflow-x: hidden;
 }
 
@@ -22,13 +35,19 @@ a {
 }
 
 /* 3. ul,ol 리셋 */
-ul, ol {
+ul,
+ol {
   list-style: none;
   /* 블릿/숫자 제거 */
 }
 
 /* 4. h요소 글자크기 리셋 */
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-size: 100%;
   /* html의 기본글자크기(16px)와 일치 초기화 */
 }
@@ -201,6 +220,62 @@ body * {
 /* 보그 PJ공통 CSS - common.css */
 /* 상단,하단 공통모듈 */
 /**************************************** 상단영역 **************************************/
+#top-area {
+  position: relative;
+  z-index: 1;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+  /****************************************** 
+    상단영역 겉박스에 클래스 on줄경우 슬림메뉴
+  ******************************************/
+
+#top-area.on {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  z-index: 999;
+  /* 1. 상단영역 최소높이 해제 */
+  /* 2. 상단메뉴 없애기 */
+  /* 4. 로고 박스 */
+  /* 5. GNB박스 */
+}
+#top-area.on .top-area {
+  min-height: 50px;
+}
+#top-area.on .tmenu {
+  display: none;
+}
+#top-area.on .logo {
+  position: absolute;
+  left: 0;
+  /* 부모는? #top-area */
+  padding: 10px;
+  height: auto;
+  margin-bottom: 0;
+  /* 로고 이미지 */
+}
+#top-area.on .logo img {
+  width: 100px;
+}
+#top-area.on .gnb {
+  min-height: 45px;
+  padding-top: 5px;
+  /* GNB메뉴 a */
+}
+#top-area.on .gnb ul {
+  gap: 0 35px;
+}
+#top-area.on .gnb a {
+  color: #333;
+  font-size: 14px;
+}
+#top-area.on .gnb a:hover {
+  color: red;
+}
+
 .top-area {
   /* 최소높이 */
   min-height: 206px;
@@ -245,7 +320,8 @@ body * {
 .tmenu .sns a.cas {
   background: url(../images/sns_kakao.png) no-repeat center/auto 100%;
 }
-.tmenu .sns a.fi-camera, .tmenu .sns a.fi-laptop {
+.tmenu .sns a.fi-camera,
+.tmenu .sns a.fi-laptop {
   font-style: 14px;
 }
 .tmenu .sideMenu .smbx {
@@ -358,7 +434,69 @@ body * {
 .footer-area {
   /* 최소높이 */
   min-height: 285px;
+  background-color: #000;
+  padding: 70px;
+  box-sizing: border-box;
+  /* 글씨체 공통 */
+  font-family: "Roboto", nbg;
 }
+.footer-area .blogo {
+  text-align: center;
+}
+.footer-area .addr {
+  color: #747474;
+  text-align: center;
+  font-size: 11px;
+  /* address 요소 기본 이탤릭해제 */
+  font-style: normal;
+  margin: 20px 0 10px;
+}
+
+
+.footer-area .blink {
+  /* 플렉스박스 */
+  display: flex;
+  /* 진행방향정렬 : 중앙 */
+  justify-content: center;
+  /* 플렉스 랩핑박스 */
+  flex-wrap: wrap;
+  /* 사이간격 gap: 위아래 양쪽 */
+  gap: 0 12px;
+}
+.footer-area .blink a {
+  color: #747474;
+  font-size: 13px;
+}
+.footer-area .blink li:last-child a {
+  font-weight: bold;
+}
+
+/* 위로가기 버튼 */
+.tbtn {
+  position: fixed;
+  bottom: -35px; /* 아랫쪽에 나가있음 */
+  right: 75px;
+  width: 48px;
+  height: 35px;
+  text-align: center;
+  line-height: 35px;
+  background-color: #333;
+  border-radius: 4px 4px 0 0;
+  color: #fff;
+  z-index: 9999;
+  font-size: 12px;
+  opacity: 0; /* 처음에 투명 */
+  /* 트랜지션 - bottom엔 적용되면 안되므로 별도지정함 */
+  transition: background-color 0.3s, opacity 0.3s;
+}
+.tbtn.on {
+  opacity: 1;
+  bottom: 0;
+}
+.tbtn:hover {
+  background-color: red;
+}
+
 
 /* 개별배경이미지 */
 /* 1번 - 1개 */
@@ -426,4 +564,4 @@ body * {
 
 .bg15 {
   background-image: url(../images/cont7-3.jpg);
-}/*# sourceMappingURL=main.css.map */
+} /*# sourceMappingURL=main.css.map */
