--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/css/main.css
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/css/main.css
@@ -87,9 +87,9 @@ font-family: 'Roboto Condensed', sans-serif;
   4. bgi - background image 관련 속성
 */
 /* 공사중 표시 */
-body * {
+/* body * {
   outline: 1px dashed gray;
-}
+} */
 
 /************* 2. 공통 class *************/
 /* 2-1. 중앙 속박스 */
