--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/css/common/_common.scss
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/css/common/_common.scss
@@ -1,7 +1,7 @@
-/* 보그 PJ공통 CSS - common.css */
-/* 상단,하단 공통모듈 */
+/* 보그 PJ 공통 CSS - common.css */
+/* 상단, 하단 공통 모듈 CSS */
 
-/**************************************** 상단영역 **************************************/
+/****************** 1.상단영역 ******************/
 // 상단영역 겉박스
 #top-area {
   position: relative;
@@ -48,7 +48,7 @@
       padding-top: 5px;
 
       // GNB ul
-      ul{
+      ul {
         gap: 0 35px;
       }
 
@@ -57,28 +57,27 @@
         color: #333;
         font-size: 14px;
         // 오버시 빨간색글자
-        &:hover{
+        &:hover {
           color: red;
         }
       }
     }
   }
 }
-
 // 상단영역 속박스
 .top-area {
   /* 최소높이 */
   min-height: 206px;
 }
-// 1-1 상단메뉴
+// 1-1.상단메뉴
 .tmenu {
   display: flex;
   max-width: 970px;
   height: 44px;
   margin: 0 auto;
-  // 상단메뉴 하위 파티션 박스 1:1 비율
+  // 상단 메뉴 하위 파티션 박스 1:1 비율
   div {
-    flex: 1px;
+    flex: 1;
   }
   // 1-1-1.sns박스
   .sns a {
@@ -97,12 +96,11 @@
     /* 트랜지션: 속시이지 */
     transition: opacity 0.2s;
 
-    // a요소 마우스오버시
+    // a요소 마우스 오버시
     &:hover {
       opacity: 0.8;
       color: hotpink;
     }
-
     /* 트위터 크기조정 */
     &.fi-twitter {
       font-size: 13px;
@@ -115,13 +113,13 @@
     &.cas {
       background: url(../images/sns_kakao.png) no-repeat center/auto 100%;
     }
+    // 갤러리 아이콘, 로그인 아이콘
     &.fi-camera,
     &.fi-laptop {
-      font-style: 14px;
+      font-size: 14px;
     }
-    // 로그인 아이콘
   }
-  //   1-1-2. 사이드메뉴
+  // 1-1-2. 사이드 메뉴
   .sideMenu {
     .smbx {
       /* 플렉스박스 */
@@ -134,7 +132,6 @@
         family: "Roboto", nbg;
         size: 12px;
       }
-
       /* 사이드메뉴 상위 a요소 */
       > li {
         > a {
@@ -144,15 +141,15 @@
           color: #747474;
         }
         /* 사이드메뉴 상위메뉴 첫번째li 사이구분선 */
-        // &는 선택자를 명확히 구분할때 사용한다
+        // &는 선택자를 명확히 구분할때 사용한다!
         &:first-child {
-          border-right: 1px solid #747474;
+          border-right: 1px solid #e5e5e5;
+          // 직계 a요소만 오버시 커서글자용표시
           > a {
             cursor: text;
           }
         }
-
-        // 사이드메뉴 서브박스
+        // 사이드 메뉴 서브박스
         .smsub {
           position: absolute;
           border: 1px solid #e5e5e5;
@@ -163,22 +160,22 @@
           opacity: 0;
           /* 트랜지션 */
           transition: 0.5s;
-        }
-        // a요소 디자인
-        a {
-          display: block;
-          padding: 7px 10px;
-          padding-right: 19px;
-          background-color: #fff;
-          color: #747474;
 
-          //   서브a에 마우스 오버시
-          &:hover {
-            background-color: pink;
-            color: #333;
+          // a요소 디자인
+          a {
+            display: block;
+            padding: 7px 10px;
+            padding-right: 19px;
+            background-color: #fff;
+            color: #747474;
+            // 서브a에 마우스 오버시
+            &:hover {
+              background-color: pink;
+              color: #333;
+            }
           }
         }
-        // 상위 li에 마우스 오버시 서브메뉴 보이기
+        // 상위li에 마우스 오버시 서브메뉴 보이기
         &:hover .smsub {
           opacity: 1;
           height: auto;
@@ -187,14 +184,13 @@
     }
   }
 }
-// 1-2 로고박스
-/* 1-2.로고박스 */
+// 1-2.로고박스
 .logo {
   height: 104px;
   margin-bottom: 10px;
   text-align: center;
 }
-// 1-3 GNB 메뉴
+// 1-3.GNB박스
 .gnb {
   min-height: 46px;
   padding: 0 30px;
@@ -209,41 +205,44 @@
     /* 사이간격 속성 -> gap: 위아래 양쪽 (flex에서 사용함)
           -> 숫자를 하나만 쓰면 양방향이 모두같은수치 셋팅 */
     gap: 0 45px;
-
     /* GNB li 리스트 */
     li {
       /* padding-right: 45px; 
-    -> 사이간격을 li에 패딩으로 안주고
-    부모요소인 flex박스에서 gap속성으로 준다! */
+        -> 사이간격을 li에 패딩으로 안주고
+        부모요소인 flex박스에서 gap속성으로 준다! */
       font-family: "Roboto Condensed", sans-serif;
       line-height: 40px;
+
+      // 마지막 li돋보기 두꺼운 글자적용
       &:last-child i {
-        /* 돋보기는 i요소 */
         font-weight: bold;
         cursor: pointer;
+        // i에 오버시
         &:hover {
           color: red;
         }
       }
     }
   }
-
   /* GNB a요소 */
   a {
     /* 트랜지션 */
     transition: color 0.2s linear;
+    // a에 오버시
     &:hover {
       color: red;
     }
   }
 }
 
-/**************************************** 메인영역 **************************************/
+/****************** 2.메인영역 ******************/
 .main-area {
-  /* 최소높이 - 컨텐츠가 작을 경우 대비 */
+  /* 최소높이 : 컨텐츠가 작을 경우대비 */
   min-height: 600px;
 }
-/**************************************** 하단영역 **************************************/
+
+/****************** 3.하단영역 ******************/
+// 하단속박스
 .footer-area {
   /* 최소높이 */
   min-height: 285px;
@@ -277,11 +276,13 @@
     flex-wrap: wrap;
     /* 사이간격 gap: 위아래 양쪽 */
     gap: 0 12px;
+
     // 하위 a요소
     a {
       color: #747474;
       font-size: 13px;
     }
+
     // 마지막li a만 두꺼운글자
     li:last-child a {
       font-weight: bold;
