--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/css/login.css
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/css/login.css
@@ -195,9 +195,9 @@ font-family: 'Roboto Condensed', sans-serif;
   background-color: #f9f9f9;
 }
 
-/* 보그 PJ공통 CSS - common.css */
-/* 상단,하단 공통모듈 */
-/**************************************** 상단영역 **************************************/
+/* 보그 PJ 공통 CSS - common.css */
+/* 상단, 하단 공통 모듈 CSS */
+/****************** 1.상단영역 ******************/
 #top-area {
   position: relative;
   z-index: 1;
@@ -264,7 +264,7 @@ font-family: 'Roboto Condensed', sans-serif;
   margin: 0 auto;
 }
 .tmenu div {
-  flex: 1px;
+  flex: 1;
 }
 .tmenu .sns a {
   width: 16px;
@@ -297,7 +297,7 @@ font-family: 'Roboto Condensed', sans-serif;
   background: url(../images/sns_kakao.png) no-repeat center/auto 100%;
 }
 .tmenu .sns a.fi-camera, .tmenu .sns a.fi-laptop {
-  font-style: 14px;
+  font-size: 14px;
 }
 .tmenu .sideMenu .smbx {
   /* 플렉스박스 */
@@ -319,7 +319,7 @@ font-family: 'Roboto Condensed', sans-serif;
   color: #747474;
 }
 .tmenu .sideMenu .smbx > li:first-child {
-  border-right: 1px solid #747474;
+  border-right: 1px solid #e5e5e5;
 }
 .tmenu .sideMenu .smbx > li:first-child > a {
   cursor: text;
@@ -335,14 +335,14 @@ font-family: 'Roboto Condensed', sans-serif;
   /* 트랜지션 */
   transition: 0.5s;
 }
-.tmenu .sideMenu .smbx > li a {
+.tmenu .sideMenu .smbx > li .smsub a {
   display: block;
   padding: 7px 10px;
   padding-right: 19px;
   background-color: #fff;
   color: #747474;
 }
-.tmenu .sideMenu .smbx > li a:hover {
+.tmenu .sideMenu .smbx > li .smsub a:hover {
   background-color: pink;
   color: #333;
 }
@@ -351,7 +351,6 @@ font-family: 'Roboto Condensed', sans-serif;
   height: auto;
 }
 
-/* 1-2.로고박스 */
 .logo {
   height: 104px;
   margin-bottom: 10px;
@@ -378,13 +377,12 @@ font-family: 'Roboto Condensed', sans-serif;
 }
 .gnb ul li {
   /* padding-right: 45px; 
-  -> 사이간격을 li에 패딩으로 안주고
-  부모요소인 flex박스에서 gap속성으로 준다! */
+    -> 사이간격을 li에 패딩으로 안주고
+    부모요소인 flex박스에서 gap속성으로 준다! */
   font-family: "Roboto Condensed", sans-serif;
   line-height: 40px;
 }
 .gnb ul li:last-child i {
-  /* 돋보기는 i요소 */
   font-weight: bold;
   cursor: pointer;
 }
@@ -399,13 +397,13 @@ font-family: 'Roboto Condensed', sans-serif;
   color: red;
 }
 
-/**************************************** 메인영역 **************************************/
+/****************** 2.메인영역 ******************/
 .main-area {
-  /* 최소높이 - 컨텐츠가 작을 경우 대비 */
+  /* 최소높이 : 컨텐츠가 작을 경우대비 */
   min-height: 600px;
 }
 
-/**************************************** 하단영역 **************************************/
+/****************** 3.하단영역 ******************/
 .footer-area {
   /* 최소높이 */
   min-height: 285px;
