--- a/700.쉐도잉프로젝트/04.Pilot_PJ/02.구현소스/pilot-app/src/css/cart_list.scss
+++ b/700.쉐도잉프로젝트/04.Pilot_PJ/02.구현소스/pilot-app/src/css/cart_list.scss
@@ -134,13 +134,24 @@
   /* 반영 버튼 */
   .btn-insert {
     position: absolute;
+    margin-left: 74px;
+    white-space: nowrap;
+    padding: 0;
+    // overflow: hidden;
+    // width: 0;
+    // transition: .1s .1s;
+  display: none;
+  }
+  /* 취소 버튼 */
+  .btn-cancel {
+    position: absolute;
     margin-left: 43px;
     white-space: nowrap;
     padding: 0;
-    overflow: hidden;
-    width: 0;
-    transition: .1s .1s;
-    /* display: none; */
+    // overflow: hidden;
+    // width: 0;
+    // transition: .1s .1s;
+   display: none; 
   }
   /* 입력창에 포커스 갈때 다음형제요소 반영버튼 보이기 */
   .item-cnt:focus+.btn-insert{
